CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(flux)

SET(CMAKE_CXX_STANDARD 20)

FILE(GLOB_RECURSE SOURCES "${CMAKE_SOURCE_DIR}/flux/*.cpp")

INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
)

ADD_EXECUTABLE(flux ${SOURCES})
set_target_properties(flux PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
